--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>This is testing for GIT.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam aliquam ut possimus animi voluptas accusantium doloribus perspiciatis perferendis, vero ea incidunt praesentium pariatur ad velit cum blanditiis? Asperiores sunt at iusto. Eius porro aut cum ullam! Aut, nihil dolores!</p>
 
     <script src="js/app.js"></script>
 </body>
